[package]
edition = "2021"
name = "bevy-test"
version = "0.1.0"

[dependencies]
bevy = {version = "0.11.0", features = ["dynamic_linking"]}
bevy_pixel_camera = "*"
rand = "*"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
