[package]
edition = "2021"
name = "bevy-test"
version = "0.1.0"

[dependencies]
bevy = {version = "0.11.0", features = ["dynamic_linking"]}
bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render-2d" ] }
bevy_pixel_camera = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "*"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
